fix: complete workflow rewrite with all dependencies

--- a/.github/workflows/build-wallets.yml
+++ b/.github/workflows/build-wallets.yml
@@ -1,110 +1,114 @@
 name: Build BrrrFren Wallets
 
-permissions:
-  contents: write
-
 on:
   push:
-    tags: ['v*']
+    tags:
+      - 'v*.*.*'
 
 jobs:
   build:
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        
-    runs-on: ${{ matrix.os }}
-    
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        
-      # ---------- Cache dependencies ----------
-      - name: Cache Linux dependencies
-        if: runner.os == 'Linux'
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cache/apt
-            /var/cache/apt
-          key: ${{ runner.os }}-deps-${{ hashFiles('**/configure.ac') }}
-          
-      # ---------- Install dependencies ----------
-      - name: Install build deps (Linux)
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            build-essential libtool autotools-dev automake pkg-config \
-            libevent-dev libssl-dev libboost-all-dev \
-            qtbase5-dev qttools5-dev-tools protobuf-compiler \
-            libqrencode-dev libminiupnpc-dev libdb++-dev
-            
-      - name: Setup MSYS2 (Windows)
-        if: runner.os == 'Windows'
-        uses: msys2/setup-msys2@v2
-        with:
-          update: true
-          install: >-
-            git
-            base-devel
-            mingw-w64-x86_64-toolchain
-            mingw-w64-x86_64-qt5
-            mingw-w64-x86_64-boost
-            mingw-w64-x86_64-protobuf
-            mingw-w64-x86_64-libevent
-            mingw-w64-x86_64-qrencode
-            mingw-w64-x86_64-miniupnpc
-            mingw-w64-x86_64-db
-            
-      # ---------- Build ----------
-      - name: Build BrrrFren (Linux)
-        if: runner.os == 'Linux'
-        run: |
-          ./autogen.sh
-          ./configure --with-gui --enable-reduce-exports
-          make -j$(nproc)
-          
-      - name: Build BrrrFren (Windows)
-        if: runner.os == 'Windows'
-        shell: msys2 {0}
-        run: |
-          ./autogen.sh
-          ./configure --with-gui --enable-reduce-exports
-          make -j$(nproc)
-          
-      # ---------- Package binaries ----------
-      - name: Package binaries
-        shell: bash
-        run: |
-          VER=${GITHUB_REF#refs/tags/}
-          mkdir -p release
-          
-          case $RUNNER_OS in
-            Linux)
-              # Package Linux binaries
-              tar -czvf release/brrrfren-${VER}-linux-x64.tar.gz \
-                src/qt/dogecoin-qt src/dogecoind src/dogecoin-cli
-              # Generate checksums
-              cd release && sha256sum *.tar.gz > checksums-linux.txt
-              ;;
-            Windows)
-              # Package Windows binaries
-              7z a release/brrrfren-${VER}-win-x64.zip \
-                src/qt/*.exe src/*.exe
-              # Generate checksums
-              cd release && sha256sum *.zip > checksums-windows.txt
-              ;;
-          esac
-          
-      # ---------- Upload release assets ----------
-      - name: Upload binaries to release
-        uses: softprops/action-gh-release@v2
-        with:
-          files: |
-            release/*.tar.gz
-            release/*.zip
-            release/checksums-*.txt
-          draft: false
-          prerelease: false
-          generate_release_notes: true
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Cache Linux dependencies
+      if: matrix.os == 'ubuntu-latest'
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.cache/apt
+          ~/.local/share/vcpkg
+        key: ${{ matrix.os }}-deps-${{ hashFiles('**/configure.ac') }}
+        restore-keys: |
+          ${{ matrix.os }}-deps-
+
+    - name: Install dependencies (Linux)
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          build-essential libtool autotools-dev automake pkg-config \
+          libevent-dev libssl-dev libboost-all-dev \
+          qtbase5-dev qttools5-dev-tools protobuf-compiler \
+          libqrencode-dev libminiupnpc-dev libdb++-dev
+
+    - name: Install dependencies (Windows)
+      if: matrix.os == 'windows-latest'
+      uses: msys2/setup-msys2@v2
+      with:
+        update: true
+        install: >-
+          git
+          base-devel
+          mingw-w64-x86_64-toolchain
+          mingw-w64-x86_64-cmake
+          mingw-w64-x86_64-autotools
+          mingw-w64-x86_64-pkg-config
+          mingw-w64-x86_64-boost
+          mingw-w64-x86_64-libevent
+          mingw-w64-x86_64-db
+          mingw-w64-x86_64-openssl
+          mingw-w64-x86_64-qt5-base
+          mingw-w64-x86_64-qt5-tools
+          mingw-w64-x86_64-protobuf
+          mingw-w64-x86_64-qrencode
+          mingw-w64-x86_64-miniupnpc
+
+    - name: Build BrrrFren (Linux)
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+        ./autogen.sh
+        ./configure --enable-static --disable-shared --with-pic
+        make -j$(nproc)
+        strip src/brrrfrend src/brrrfren-cli src/brrrfren-tx
+        mkdir -p dist
+        cp src/brrrfrend src/brrrfren-cli src/brrrfren-tx dist/
+
+    - name: Build BrrrFren (Windows)
+      if: matrix.os == 'windows-latest'
+      shell: msys2 {0}
+      run: |
+        ./autogen.sh
+        ./configure --enable-static --disable-shared --with-pic
+        make -j$(nproc)
+        strip src/brrrfrend.exe src/brrrfren-cli.exe src/brrrfren-tx.exe
+        mkdir -p dist
+        cp src/brrrfrend.exe src/brrrfren-cli.exe src/brrrfren-tx.exe dist/
+
+    - name: Package binaries
+      run: |
+        if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
+          cd dist
+          tar -czf ../brrrfren-linux-x64.tar.gz *
+          cd ..
+          echo "ASSET_NAME=brrrfren-linux-x64.tar.gz" >> $GITHUB_ENV
+        else
+          cd dist
+          7z a ../brrrfren-windows-x64.zip *
+          cd ..
+          echo "ASSET_NAME=brrrfren-windows-x64.zip" >> $GITHUB_ENV
+        fi
+      shell: bash
+
+    - name: Generate checksums
+      run: |
+        if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
+          sha256sum brrrfren-linux-x64.tar.gz > brrrfren-linux-x64.tar.gz.sha256
+        else
+          sha256sum brrrfren-windows-x64.zip > brrrfren-windows-x64.zip.sha256
+        fi
+      shell: bash
+
+    - name: Upload binaries to release
+      uses: softprops/action-gh-release@v1
+      with:
+        files: |
+          ${{ env.ASSET_NAME }}
+          ${{ env.ASSET_NAME }}.sha256
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
