--- a/.github/workflows/build-wallets.yml
+++ b/.github/workflows/build-wallets.yml
@@ -50,6 +50,7 @@ jobs:
           mingw-w64-x86_64-autotools
           mingw-w64-x86_64-pkg-config
           mingw-w64-x86_64-boost
+          mingw-w64-x86_64-boost-libs
           mingw-w64-x86_64-libevent
           mingw-w64-x86_64-db
           mingw-w64-x86_64-openssl
