--- a/.github/workflows/build-wallets.yml
+++ b/.github/workflows/build-wallets.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build:
     runs-on: ${{ matrix.os }}
+    timeout-minutes: 60  # Increase timeout to 60 minutes
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
@@ -34,7 +35,8 @@ jobs:
         sudo apt-get install -y \
           build-essential libtool autotools-dev automake pkg-config \
           libevent-dev libssl-dev \
-          libboost-system-dev libboost-filesystem-dev libboost-thread-dev libboost-chrono-dev libboost-iostreams-dev libboost-program-options-dev libboost-test-dev \
+          libboost-system-dev libboost-filesystem-dev libboost-thread-dev libboost-chrono-dev \
+          libboost-iostreams-dev libboost-program-options-dev libboost-test-dev \
           qtbase5-dev qttools5-dev-tools protobuf-compiler \
           libqrencode-dev libminiupnpc-dev libdb++-dev
 
@@ -76,11 +78,7 @@ jobs:
       shell: msys2 {0}
       run: |
         ./autogen.sh
-        export BOOST_SYSTEM_LIB="-lboost_system-mt"
-        export BOOST_FILESYSTEM_LIB="-lboost_filesystem-mt"
-        export BOOST_THREAD_LIB="-lboost_thread-mt"
-        export BOOST_CHRONO_LIB="-lboost_chrono-mt"
-        ./configure --enable-static --disable-shared --with-pic --with-incompatible-bdb --with-qt=no
+        ./configure --enable-static --disable-shared --with-pic --with-incompatible-bdb --with-qt=no --with-boost-libdir=/mingw64/lib
         make -j$(nproc)
         strip src/brrrfrend.exe src/brrrfren-cli.exe src/brrrfren-tx.exe
         mkdir -p dist
