--- a/.github/workflows/build-wallets.yml
+++ b/.github/workflows/build-wallets.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     runs-on: ${{ matrix.os }}
-    timeout-minutes: 60  # Increase timeout to 60 minutes
+    timeout-minutes: 60
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
@@ -78,6 +78,7 @@ jobs:
       shell: msys2 {0}
       run: |
         ./autogen.sh
+        export BOOST_LIB_SUFFIX=-mt
         ./configure --enable-static --disable-shared --with-pic --with-incompatible-bdb --with-qt=no --with-boost-libdir=/mingw64/lib
         make -j$(nproc)
         strip src/brrrfrend.exe src/brrrfren-cli.exe src/brrrfren-tx.exe
