--- a/.github/workflows/build-wallets.yml
+++ b/.github/workflows/build-wallets.yml
@@ -79,52 +79,37 @@ jobs:
       run: |
         ./autogen.sh
         
-        echo "=== DEBUGGING BOOST SETUP ==="
-        echo "Boost library files in /mingw64/lib:"
-        ls -la /mingw64/lib/libboost* || echo "No boost libraries found"
-        echo
-        echo "Boost header files:"
-        ls -la /mingw64/include/boost/ | head -10 || echo "No boost headers found"
-        echo
-        echo "Current environment variables:"
-        env | grep -i boost || echo "No BOOST env vars set"
-        echo "=== END DEBUGGING ==="
+        # Work around MSYS2 missing libboost_system-mt.a issue
+        # Create a dummy libboost_system-mt.a since boost::system is mostly header-only in newer versions
+        echo "Working around missing libboost_system-mt.a in MSYS2..."
+        if [ ! -f /mingw64/lib/libboost_system-mt.a ]; then
+          echo "Creating dummy libboost_system-mt.a (header-only in boost 1.88)"
+          ar crs /mingw64/lib/libboost_system-mt.a
+        fi
         
-        # Explicit approach with cleaner variable setup
-        export BOOST_ROOT=${BOOST_ROOT:-/mingw64}
-        export BOOST_INCLUDEDIR=${BOOST_INCLUDEDIR:-/mingw64/include}
-        export BOOST_LIBRARYDIR=${BOOST_LIBRARYDIR:-/mingw64/lib}
-
+        # Alternative approach: modify configure to skip boost_system linking test
+        # Since boost::system is header-only in modern boost versions anyway
+        export BOOST_ROOT=/mingw64
+        export BOOST_INCLUDEDIR=/mingw64/include
+        export BOOST_LIBRARYDIR=/mingw64/lib
         export BOOST_SYSTEM_LIB=boost_system-mt
         export BOOST_FILESYSTEM_LIB=boost_filesystem-mt
         export BOOST_THREAD_LIB=boost_thread-mt
         export BOOST_CHRONO_LIB=boost_chrono-mt
         export BOOST_PROGRAM_OPTIONS_LIB=boost_program_options-mt
         export BOOST_UNIT_TEST_FRAMEWORK_LIB=boost_unit_test_framework-mt
-
-        echo "=== RUNNING CONFIGURE ==="
-        echo "Environment variables set:"
-        env | grep BOOST
-        echo
         
-        # Explicit CPPFLAGS and LDFLAGS to make paths clear to configure
+        # Force configure to accept that boost_system is available (since it's header-only)
+        export ax_cv_boost_system=yes
+        export BOOST_SYSTEM_LIB=""  # Empty since it's header-only
+        
         ./configure \
           CPPFLAGS="-I${BOOST_INCLUDEDIR}" \
           LDFLAGS="-L${BOOST_LIBRARYDIR}" \
           --enable-static --disable-shared --with-pic \
           --with-incompatible-bdb --with-qt=no \
-          --with-boost="${BOOST_ROOT}" || {
+          --with-boost="${BOOST_ROOT}"
           
-          echo "=== CONFIGURE FAILED - SHOWING CONFIG.LOG ==="
-          echo "Last 100 lines of config.log:"
-          tail -100 config.log
-          echo
-          echo "=== BOOST-RELATED ERRORS FROM CONFIG.LOG ==="
-          grep -i -A5 -B5 "boost\|error\|failed" config.log | tail -50
-          echo "=== END CONFIG.LOG DEBUG ==="
-          exit 1
-        }
-        
         make -j$(nproc)
         strip src/brrrfrend.exe src/brrrfren-cli.exe src/brrrfren-tx.exe
         mkdir -p dist
