fix: add GitHub token permissions for release creation

--- a/.github/workflows/build-wallets.yml
+++ b/.github/workflows/build-wallets.yml
@@ -5,6 +5,11 @@ on:
     tags:
       - 'v*.*.*'
 
+# 🎯 FIX: Add permissions for GitHub token
+permissions:
+  contents: write
+  packages: write
+
 jobs:
   build:
     runs-on: ${{ matrix.os }}
