--- a/.github/workflows/build-wallets.yml
+++ b/.github/workflows/build-wallets.yml
@@ -5,7 +5,6 @@ on:
     tags:
       - 'v*.*.*'
 
-# 🎯 FIX: Add permissions for GitHub token
 permissions:
   contents: write
   packages: write
@@ -121,15 +120,17 @@ jobs:
         # Force configure to accept that boost_system is available
         export ax_cv_boost_system=yes
         
-        # 🎯 FIX: Force C++17 to fix Boost Math template errors
+        # 🎯 FIX: Force C++17 + disable tests + add missing Windows libs
         export CXXFLAGS="-g -O2 -std=c++17"
+        export LDFLAGS="-lbcrypt"
         
         ./configure \
           CPPFLAGS="-I${BOOST_INCLUDEDIR}" \
-          LDFLAGS="-L${BOOST_LIBRARYDIR}" \
+          LDFLAGS="-L${BOOST_LIBRARYDIR} ${LDFLAGS}" \
           CXXFLAGS="${CXXFLAGS}" \
           --enable-static --disable-shared --with-pic \
           --with-incompatible-bdb --with-qt=no \
+          --disable-tests --disable-bench \
           --with-boost="${BOOST_ROOT}"
           
         make -j$(nproc)
