--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,10 @@ jobs:
     
     - name: Build
       run: |
+        export CXXFLAGS="-O2 -pipe -std=c++11 -D_GLIBCXX_USE_CXX11_ABI=0"
+        export CFLAGS="-O2 -pipe"
+        export CPPFLAGS=""
+        
         ./autogen.sh
         ./configure \
           --prefix=${{ github.workspace }}/depends/x86_64-linux-gnu \
@@ -52,8 +56,11 @@ jobs:
           --without-gui \
           --disable-wallet \
           --disable-zmq \
-          --disable-man
-        make -j$(nproc)
+          --disable-man \
+          CXXFLAGS="$CXXFLAGS" \
+          CFLAGS="$CFLAGS" \
+          CPPFLAGS="$CPPFLAGS"
+        make -j$(nproc) V=1
     
     - name: Check Binary
       run: |
