--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,19 +34,34 @@ jobs:
           libssl-dev \
           libevent-dev \
           bsdmainutils \
-          libboost-system-dev \
-          libboost-filesystem-dev \
-          libboost-chrono-dev \
-          libboost-program-options-dev \
-          libboost-test-dev \
-          libboost-thread-dev \
-          git
+          libboost1.74-dev \
+          libboost-system1.74-dev \
+          libboost-filesystem1.74-dev \
+          libboost-chrono1.74-dev \
+          libboost-program-options1.74-dev \
+          libboost-test1.74-dev \
+          libboost-thread1.74-dev \
+          git \
+          wget \
+          ca-certificates
+        
+        # Install specific version of Boost if needed
+        # wget https://boostorg.jfrog.io/artifactory/main/release/1.74.0/source/boost_1_74_0.tar.bz2
+        # tar xf boost_1_74_0.tar.bz2
+        # cd boost_1_74_0
+        # ./bootstrap.sh --with-libraries=system,filesystem,thread,chrono,program_options,test
+        # sudo ./b2 install
     
     - name: Build
       run: |
-        export CXXFLAGS="-O2 -pipe -std=c++11 -D_GLIBCXX_USE_CXX11_ABI=0"
-        export CFLAGS="-O2 -pipe"
-        export CPPFLAGS=""
+        # Set compiler flags for maximum compatibility
+        export CXXFLAGS="-O2 -pipe -std=c++11 -D_GLIBCXX_USE_CXX11_ABI=0 -fPIC"
+        export CFLAGS="-O2 -pipe -fPIC"
+        export CPPFLAGS="-D_GLIBCXX_USE_CXX11_ABI=0"
+        export LDFLAGS="-Wl,-O1 -Wl,--as-needed"
+        
+        # Set Boost root if using custom Boost installation
+        # export BOOST_ROOT="/usr/local"
         
         ./autogen.sh
         ./configure \
