--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,9 +23,9 @@ jobs:
         submodules: recursive
     
     - name: Set up GCC 9
-      uses: actions/setup-gcc@v3
+      uses: egor-tensin/setup-gcc@v1
       with:
-        gcc-version: '9'
+        version: 9
         
     - name: Install Dependencies
       run: |
