ci: Fix dependency installation in GitHub Actions
- Replace libboost-all-dev with specific Boost packages
- Remove unnecessary dependencies that might cause conflicts
- Match the dependency list from the working build-wallets.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,6 @@ jobs:
     - name: Install Dependencies
       run: |
         sudo apt-get update
-        # Install build essentials and base dependencies
         sudo apt-get install -y \
           build-essential \
           libtool \
@@ -45,24 +44,19 @@ jobs:
           pkg-config \
           libevent-dev \
           libssl-dev \
-          # Install all available Boost development packages
-          libboost-all-dev \
-          # QT5 development packages
+          libboost-system-dev \
+          libboost-filesystem-dev \
+          libboost-thread-dev \
+          libboost-chrono-dev \
+          libboost-iostreams-dev \
+          libboost-program-options-dev \
+          libboost-test-dev \
           qtbase5-dev \
           qttools5-dev-tools \
-          libqt5svg5-dev \
-          libqt5gui5 \
-          # Protocol Buffers
           protobuf-compiler \
-          libprotobuf-dev \
-          # Other dependencies
           libqrencode-dev \
           libminiupnpc-dev \
-          libdb++-dev \
-          libdb5.3++-dev \
-          bsdmainutils \
-          libzmq3-dev \
-          libsqlite3-dev
+          libdb++-dev
     
     - name: Build
       run: |
