Fix build issues and update GitHub Actions workflow
- Fix config includes in compat/endian.h and compat/byteswap.h
- Add HAVE_CONFIG_H flag to CPPFLAGS in configure
- Update GitHub Actions workflow with all required dependencies
- Add libboost-all-dev and other missing development libraries
- Enable HAVE_CONFIG_H in build configuration

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,7 @@ jobs:
           pkg-config \
           libevent-dev \
           libssl-dev \
+          libboost-all-dev \
           libboost-system-dev \
           libboost-filesystem-dev \
           libboost-thread-dev \
@@ -51,12 +52,16 @@ jobs:
           libboost-iostreams-dev \
           libboost-program-options-dev \
           libboost-test-dev \
+          libboost-dev \
           qtbase5-dev \
           qttools5-dev-tools \
           protobuf-compiler \
           libqrencode-dev \
           libminiupnpc-dev \
-          libdb++-dev
+          libdb++-dev \
+          libdb5.3++-dev \
+          libsqlite3-dev \
+          libzmq3-dev
     
     - name: Build
       run: |
@@ -70,7 +75,8 @@ jobs:
           --disable-tests \
           --disable-bench \
           --disable-wallet \
-          --disable-zmq
+          --disable-zmq \
+          CPPFLAGS="-DHAVE_CONFIG_H"
         
         make -j$(nproc)
         
