chore: trigger workflow on fix-build branch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,9 +4,11 @@ on:
   push:
     branches:
       - main
+      - fix-build
   pull_request:
     branches:
       - main
+      - fix-build
 
 jobs:
   build:
