--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,75 +1,186 @@
-name: CI Build
+name: Build and Release
 
 on:
   push:
-    branches:
-      - main
-      - fix-build
-  pull_request:
-    branches:
-      - main
-      - fix-build
+    tags:
+      - 'v*.*.*'
+
+permissions:
+  contents: write
+  packages: write
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 60
+    strategy:
+      matrix:
+        os: [ubuntu-22.04, windows-latest]
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-        with:
-          submodules: recursive
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        submodules: recursive
 
-      - name: Install build dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            autoconf automake libtool pkg-config build-essential \
-            libevent-dev libssl-dev libminiupnpc-dev \
-            libboost-all-dev
+    - name: Cache Linux dependencies
+      if: matrix.os == 'ubuntu-22.04'
+      uses: actions/cache@v4
+      with:
+        path: |
+          ~/.cache/apt
+          ~/.local/share/vcpkg
+        key: ${{ matrix.os }}-deps-${{ hashFiles('**/configure.ac') }}
+        restore-keys: |
+          ${{ matrix.os }}-deps-
 
-      - name: Fetch submodules (if any)
-        run: git submodule update --init --recursive
+    - name: Install dependencies (Linux)
+      if: matrix.os == 'ubuntu-22.04'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          build-essential libtool autotools-dev automake pkg-config \
+          libevent-dev libssl-dev \
+          libboost-system-dev libboost-filesystem-dev libboost-thread-dev libboost-chrono-dev \
+          libboost-iostreams-dev libboost-program-options-dev libboost-test-dev \
+          qtbase5-dev qttools5-dev-tools protobuf-compiler \
+          libqrencode-dev libminiupnpc-dev libdb++-dev
 
-      - name: Clean previous build artifacts
-        run: |
-          make distclean || true
+    - name: Install dependencies (Windows)
+      if: matrix.os == 'windows-latest'
+      uses: msys2/setup-msys2@v2
+      with:
+        update: true
+        install: >-
+          git
+          base-devel
+          mingw-w64-x86_64-toolchain
+          mingw-w64-x86_64-cmake
+          mingw-w64-x86_64-autotools
+          mingw-w64-x86_64-pkg-config
+          mingw-w64-x86_64-boost
+          mingw-w64-x86_64-boost-libs
+          mingw-w64-x86_64-libevent
+          mingw-w64-x86_64-db
+          mingw-w64-x86_64-openssl
+          mingw-w64-x86_64-qt5-base
+          mingw-w64-x86_64-qt5-tools
+          mingw-w64-x86_64-protobuf
+          mingw-w64-x86_64-qrencode
+          mingw-w64-x86_64-miniupnpc
 
-      - name: Generate build system
-        run: |
-          if [ -f autogen.sh ]; then
-            ./autogen.sh
-          fi
+    - name: Build (Linux)
+      if: matrix.os == 'ubuntu-22.04'
+      run: |
+        ./autogen.sh
+        ./configure --enable-static --disable-shared --with-pic --with-incompatible-bdb --with-qt=no
+        make -j$(nproc)
+        
+        echo "=== Checking what binaries exist in src/ ==="
+        ls -la src/ | grep -E "(dogecoind|dogecoin|brrrfren|brrrfren)"
+        
+        if [ -f src/poemd ]; then
+          strip src/poemd src/poem-cli src/poem-tx
+          mkdir -p dist
+          cp src/poemd src/poem-cli src/poem-tx dist/
+        elif [ -f src/dogecoind ]; then
+          strip src/dogecoind src/dogecoin-cli src/dogecoin-tx
+          mkdir -p dist
+          cp src/dogecoind src/dogecoin-cli src/dogecoin-tx dist/
+        else
+          echo "ERROR: Could not find expected binaries!"
+          ls -la src/
+          exit 1
+        fi
 
-      - name: Configure project
-        run: |
-          ./configure \
-            --enable-static \
-            --with-pic \
-            --with-incompatible-bdb \
-            --with-qt=no \
-            --disable-tests \
-            --disable-bench \
-            --disable-wallet \
-            --disable-zmq \
-            CPPFLAGS="-DHAVE_CONFIG_H"
+    - name: Build (Windows)
+      if: matrix.os == 'windows-latest'
+      shell: msys2 {0}
+      run: |
+        ./autogen.sh
+        
+        # Work around MSYS2 missing libboost_system-mt.a issue
+        echo "Working around missing libboost_system-mt.a in MSYS2..."
+        if [ ! -f /mingw64/lib/libboost_system-mt.a ]; then
+          echo "Creating dummy libboost_system-mt.a (header-only in boost 1.88)"
+          ar crs /mingw64/lib/libboost_system-mt.a
+        fi
+        
+        # Set boost environment variables
+        export BOOST_ROOT=/mingw64
+        export BOOST_INCLUDEDIR=/mingw64/include
+        export BOOST_LIBRARYDIR=/mingw64/lib
+        export BOOST_SYSTEM_LIB=boost_system-mt
+        export BOOST_FILESYSTEM_LIB=boost_filesystem-mt
+        export BOOST_THREAD_LIB=boost_thread-mt
+        export BOOST_CHRONO_LIB=boost_chrono-mt
+        export BOOST_PROGRAM_OPTIONS_LIB=boost_program_options-mt
+        export BOOST_UNIT_TEST_FRAMEWORK_LIB=boost_unit_test_framework-mt
+        
+        # Force configure to accept that boost_system is available
+        export ax_cv_boost_system=yes
+        
+        # Set C++17 + disable tests + add missing Windows libs
+        export CXXFLAGS="-g -O2 -std=c++17"
+        export LDFLAGS="-lbcrypt"
+        
+        ./configure \
+          CPPFLAGS="-I${BOOST_INCLUDEDIR}" \
+          LDFLAGS="-L${BOOST_LIBRARYDIR} ${LDFLAGS}" \
+          CXXFLAGS="${CXXFLAGS}" \
+          --enable-static --disable-shared --with-pic \
+          --with-incompatible-bdb --with-qt=no \
+          --disable-tests --disable-bench \
+          --with-boost="${BOOST_ROOT}"
+          
+        make -j$(nproc)
+        
+        echo "=== Checking what binaries exist in src/ ==="
+        ls -la src/ | grep -E "\.exe$"
+        
+        if [ -f src/poemd.exe ]; then
+          strip src/poemd.exe src/poem-cli.exe src/poem-tx.exe
+          mkdir -p dist
+          cp src/poemd.exe src/poem-cli.exe src/poem-tx.exe dist/
+        elif [ -f src/dogecoind.exe ]; then
+          strip src/dogecoind.exe src/dogecoin-cli.exe src/dogecoin-tx.exe
+          mkdir -p dist
+          cp src/dogecoind.exe src/dogecoin-cli.exe src/dogecoin-tx.exe dist/
+        else
+          echo "ERROR: Could not find expected binaries!"
+          ls -la src/
+          exit 1
+        fi
 
-      - name: Build project
-        run: |
-          make -j$(nproc)
+    - name: Package binaries
+      run: |
+        if [ "${{ matrix.os }}" = "ubuntu-22.04" ]; then
+          cd dist
+          tar -czf ../poem-linux-x64.tar.gz *
+          cd ..
+          echo "ASSET_NAME=poem-linux-x64.tar.gz" >> $GITHUB_ENV
+        else
+          cd dist
+          7z a ../poem-windows-x64.zip *
+          cd ..
+          echo "ASSET_NAME=poem-windows-x64.zip" >> $GITHUB_ENV
+        fi
+      shell: bash
 
-          # Check for built binaries
-          find src/ -type f -executable -ls
+    - name: Generate checksums
+      run: |
+        if [ "${{ matrix.os }}" = "ubuntu-22.04" ]; then
+          sha256sum poem-linux-x64.tar.gz > poem-linux-x64.tar.gz.sha256
+        else
+          sha256sum poem-windows-x64.zip > poem-windows-x64.zip.sha256
+        fi
+      shell: bash
 
-      - name: Upload artifacts
-        if: success()
-        uses: actions/upload-artifact@v3
-        with:
-          name: poem-binaries
-          path: |
-            src/poemd
-            src/poem-cli
-            src/poem-tx
-            src/dogecoind
-            src/dogecoin-cli
-            src/dogecoin-tx
+    - name: Upload binaries to release
+      uses: softprops/action-gh-release@v1
+      with:
+        files: |
+          ${{ env.ASSET_NAME }}
+          ${{ env.ASSET_NAME }}.sha256
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
